--- a/calculator.html
+++ b/calculator.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>calculator</title>
-        <script src="1.js" defer ></script>
-        <link rel="stylesheet" href="1.css">
+        <script src="calculator.js" defer ></script>
+        <link rel="stylesheet" href="calculator.css">
     </head>
     <body>
         <header>
